Fix jumping search input

--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -1,3 +1,7 @@
+.Posts {
+  width: 100%;
+}
+
 .Posts__filters {
   padding: 20px;
 }
